Update layout, fix footer spacing

--- a/static/src/scss/report_din5008.scss
+++ b/static/src/scss/report_din5008.scss
@@ -39,10 +39,10 @@ dt {
 footer {
     color: #616161;
     font-size: 10px;
-    height: 28mm;
-    max-height: 28mm;
+    height: 35mm;
+    max-height: 35mm;
     overflow: hidden;
-    padding: 10px (20mm - 5px) 0 (25mm - 5px);
+    padding: 10px (20mm - 5px) 0 25mm;
 
     .row {
         margin: 0 -10px;
